# lucky-simulator

./: .firebaserc  .gitignore  AGENTS.md  PROPOSAL-SAVE-EPOCH-2026-07-18.md  README.md  REPORT-COMBAT-CONSOLE-2026-07-15.md  REPORT-DOMINIUM-PANELS-2026-07-15.md  REPORT-FACT-RECEIPT-2026-07-15.md  REPORT-GFL-BASE-CREW-2026-07-18.md  REPORT-GFL-BOSS-RECRUIT-2026-07-18.md  REPORT-GFL-COMBAT-COMMAND-2026-07-19.md  REPORT-GFL-COMBAT-COMPOSITION-2026-07-18.md  REPORT-GFL-COMMANDER-LEVEL-2026-07-18.md  REPORT-GFL-FIELD-ENCOUNTER-2026-07-18.md  REPORT-GFL-MACRO-COMPAT-2026-07-18.md  REPORT-GFL-OPERATION-STAGES-2026-07-18.md  REPORT-GFL-PRIORITY-QUEUE-2026-07-19.md  REPORT-GFL-RELATION-TIER-FIX-2026-07-18.md  REPORT-GFL-ROMANCE-BALANCE-2026-07-19.md  REPORT-GFL-ROMANCE-RHYTHM-2026-07-19.md  REPORT-GFL-UI-POLISH-2026-07-18.md  REPORT-HUNTER-JOURNEY-2026-07-15.md  REPORT-INN-COMMERCE-2026-07-15.md  REPORT-PROMPT-DIET-D1-2026-07-15.md  REPORT-SAVE-EPOCH-2026-07-18.md  REPORT-SESSION-SAVE-PERF-2026-07-19.md  SCHEMA-v0.md  c71640e.diff  e65607f.diff  firebase.json  package.json  pnpm-lock.yaml
app/: build.mjs  package-lock.json  package.json  tsconfig.json  verify-m2b.js
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: BACKLOG.md  BRANDING.md  CONTENT-POLICY.md  DESIGN.md  GIRLS-FRONTLINE.md  MIGRATION-PARITY-AUDIT.md  MIGRATION.md  PLAY-PARITY-AUDIT.md  ROADMAP.md  RUNTIME-EFFECT-POLICY.md  RUNTIME-LUA-CAPABILITIES.md  THIRD_PARTY_PROVENANCE.md  (+1 more)
schema/: persona.v0.json  (+6 more)
(+273 files in other folders)
