[package]
name = "simbot-desktop"
version = "0.1.0"
description = "Deterministic long-session SimBot player and editor"
edition = "2021"

[lib]
name = "simbot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
